--- a/ImHere/Main.storyboard
+++ b/ImHere/Main.storyboard
@@ -35,16 +35,16 @@
                                     <segue destination="M7C-x6-6Z1" kind="show" id="fKc-sY-rIb"/>
                                 </connections>
                             </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jbx-1n-Ix9">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="jbx-1n-Ix9">
                                 <rect key="frame" x="0.0" y="249" width="414" height="647"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LobbyGroupCell" rowHeight="89" id="SM6-3g-zhe" userLabel="GroupCell" customClass="LobbyGroupCell" customModule="ImHere" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="89"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="LobbyGroupCell" rowHeight="85" id="SM6-3g-zhe" userLabel="GroupCell" customClass="LobbyGroupCell" customModule="ImHere" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="85"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="SM6-3g-zhe" id="1mu-P4-BCg">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="89"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="85"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Group Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rod-gL-eMS">
@@ -75,6 +75,9 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="groupImage" destination="jwp-uW-YVN" id="IdO-as-43j"/>
+                                            <outlet property="groupNameText" destination="Rod-gL-eMS" id="YoJ-8F-0kH"/>
+                                            <outlet property="numberText" destination="MpZ-UF-9oO" id="L9A-Na-lmf"/>
                                             <segue destination="dva-8s-d3d" kind="show" id="U2d-tZ-ATg"/>
                                         </connections>
                                     </tableViewCell>
@@ -122,6 +125,7 @@
                     </view>
                     <navigationItem key="navigationItem" title="Lobby" id="jCb-CY-0kZ"/>
                     <connections>
+                        <outlet property="lobbyTableView" destination="jbx-1n-Ix9" id="PqT-YD-XnF"/>
                         <outlet property="profilePic" destination="86a-AD-vpM" id="noS-0h-acl"/>
                         <outlet property="usernameLabel" destination="G5W-hf-lbm" id="XtX-lS-dZB"/>
                     </connections>
@@ -284,6 +288,11 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <navigationItem key="navigationItem" title="Message" id="ASD-xa-Sqg"/>
+                    <connections>
+                        <outlet property="groupIDText" destination="GUe-IX-a05" id="hbR-7n-vHE"/>
+                        <outlet property="groupImage" destination="ykQ-JZ-tl7" id="tcp-Y1-Hrw"/>
+                        <outlet property="groupNameText" destination="ZQD-2X-pSx" id="60s-SX-web"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="s82-I6-OI0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
